force-app/main/default/objects/UD_Masking_Detail__mdt/UD_Masking_Detail__mdt.object-meta.xml
<CustomObject>
    <label>UD Masking Detail</label>
    <pluralLabel>UD Masking Details</pluralLabel>
</CustomObject>