force-app/main/default/objects/UD_Masking_Detail__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field Names</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>