force-app/main/default/objects/UD_Masking_Detail__mdt/fields/Format_Sample__c.field-meta.xml
<CustomField>
    <fullName>Format_Sample__c</fullName>
    <label>Format/Sample</label>
    <length>255</length>
    <type>Text</type>
</CustomField>