force-app/main/default/objects/UD_Masking_Detail__mdt/fields/IsListViewVisible__c.field-meta.xml
<CustomField>
    <fullName>IsListViewVisible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsListViewVisible</label>
    <type>Checkbox</type>
</CustomField>