force-app/main/default/objects/UD_Masking_Detail__mdt/fields/IsMasked__c.field-meta.xml
<CustomField>
    <fullName>IsMasked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMasked</label>
    <type>Checkbox</type>
</CustomField>