force-app/main/default/objects/UD_Masking_Detail__mdt/fields/IsReportVisible__c.field-meta.xml
<CustomField>
    <fullName>IsReportVisible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsReportVisible</label>
    <type>Checkbox</type>
</CustomField>