force-app/main/default/objects/UD_Masking_Detail__mdt/fields/ksc_GroupName__c.field-meta.xml
<CustomField>
    <fullName>ksc_GroupName__c</fullName>
    <label>Group Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>