force-app/main/default/objects/UD_Masking_Detail__mdt/fields/ksc_IsActive__c.field-meta.xml
<CustomField>
    <fullName>ksc_IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Denotes is the custom metadata is active</description>
    <inlineHelpText>Denotes is the custom metadata is active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>