force-app/main/default/objects/UD_Masking_Detail__mdt/fields/Masked_Char_Int__c.field-meta.xml
<CustomField>
    <fullName>Masked_Char_Int__c</fullName>
    <label>Masked Char Int</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>