force-app/main/default/objects/UD_Masking_Detail__mdt/fields/Masking_Role__c.field-meta.xml
<CustomField>
    <fullName>Masking_Role__c</fullName>
    <label>Masking Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branch banking</fullName>
                <default>true</default>
                <label>Branch banking</label>
            </value>
            <value>
                <fullName>RL Priority/Corp Sal</fullName>
            </value>
            <value>
                <fullName>CEC</fullName>
            </value>
            <value>
                <fullName>Wealth</fullName>
            </value>
            <value>
                <fullName>Service Head</fullName>
            </value>
            <value>
                <fullName>RPC</fullName>
            </value>
            <value>
                <fullName>Back Office</fullName>
            </value>
            <value>
                <fullName>KLT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>