force-app/main/default/objects/UD_Masking_Detail__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
                <default>true</default>
                <label>Individual</label>
            </value>
            <value>
                <fullName>Non_Individual</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Business_Account</fullName>
                <isActive>false</isActive>
                <label>Business_Account</label>
            </value>
            <value>
                <fullName>PersonAccount</fullName>
                <isActive>false</isActive>
                <label>PersonAccount</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>