force-app/main/default/objects/UD_Masking_Detail__mdt/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>