force-app/main/default/objects/UD_Masking_Detail__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ksc_GroupName__c</columns>
    <columns>Field__c</columns>
    <columns>Field_Type__c</columns>
    <columns>Format_Sample__c</columns>
    <columns>IsListViewVisible__c</columns>
    <columns>IsMasked__c</columns>
    <columns>IsReportVisible__c</columns>
    <columns>Masked_Char_Int__c</columns>
    <columns>Masking_Role__c</columns>
    <columns>Object__c</columns>
    <columns>Persona__c</columns>
    <columns>ksc_IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>