force-app/main/default/objects/UD_Masking_Detail__mdt/listViews/MaskFields_View.listView-meta.xml
<ListView>
    <fullName>MaskFields_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Persona__c</columns>
    <columns>ksc_GroupName__c</columns>
    <columns>Field__c</columns>
    <columns>Field_Type__c</columns>
    <columns>ksc_IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ksc_GroupName__c</field>
        <operation>equals</operation>
    </filters>
    <label>MaskFields View</label>
</ListView>