force-app/main/default/objects/UD_Masking_Detail__mdt/listViews/ObjectFieldMappingView.listView-meta.xml
<ListView>
    <fullName>ObjectFieldMappingView</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Object__c</columns>
    <columns>Field__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ksc_GroupName__c</field>
        <operation>equals</operation>
        <value>ObjectFieldMapping</value>
    </filters>
    <label>ObjectFieldMapping View</label>
</ListView>