force-app/main/default/objects/UD_Masking_Detail__mdt/listViews/Persona_Mapping_View.listView-meta.xml
<ListView>
    <fullName>Persona_Mapping_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Field__c</columns>
    <columns>Field_Type__c</columns>
    <columns>Persona__c</columns>
    <columns>IsMasked__c</columns>
    <columns>Masking_Role__c</columns>
    <columns>Object__c</columns>
    <columns>Format_Sample__c</columns>
    <columns>Masked_Char_Int__c</columns>
    <columns>ksc_GroupName__c</columns>
    <columns>ksc_IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ksc_GroupName__c</field>
        <operation>equals</operation>
        <value>Persona Mapping</value>
    </filters>
    <label>Persona Mapping View</label>
</ListView>